--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,9 @@ authors = ["Geert Fannes <geert.fannes@gmail.com>"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+bincode = "1.3.3"
 clap = { version = "4.5.4", features = ["derive"] }
 hex = "0.4.3"
 ignore = "0.4.22"
+serde = { version = "1.0.202", features = ["serde_derive"] }
 sha2 = "0.10.8"
