--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ authors = ["Geert Fannes <geert.fannes@gmail.com>"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+assert_cmd = "2.0.14"
 bincode = "1.3.3"
 clap = { version = "4.5.4", features = ["derive"] }
 hex = "0.4.3"
